--- a/source/less/sage/footer.less
+++ b/source/less/sage/footer.less
@@ -16,6 +16,10 @@
   .container-fluid{
     padding-left: 50px;
     padding-right: 50px;
+    @media all and (max-width: 991px) {
+      padding-left: 25px;
+      padding-right: 25px;
+    }
   }
 
 
